--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -12,6 +12,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
+                <li><a href="/quotes">Quotes</a></li>
                
             </ul>
             <ul class="nav navbar-nav navbar-right">
