--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,24 @@
 
 </div><br>
 
+<div class="col-sm-12">
+    <div class="panel panel-default">
+        <div class="card">
+            <div class="panel-body" >
+            <blockquote class="blockquote mb-0 card-body">
+                <p>{{quote.quote}}</p>
+                <footer class="blockquote-footer">
+                    <cite title="Source Title" >{{quote.author| upper}}</cite>
+                    
+                </footer>
+                
+              </blockquote>
+            </div>
+            
+
+    </div>
+</div>
+
 <div class="container-fluid" style="background-color: #d43f3a">
   <footer class="text-center text-white">
     <div class="container-fluid">
