--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,14 +29,13 @@
             <div class="panel-body" >
             <blockquote class="blockquote mb-0 card-body">
                 <p>{{quote.quote}}</p>
-                <footer class="blockquote-footer">
-                    <cite title="Source Title" >{{quote.author| upper}}</cite>
+                <footer class="blockquote-footer" style:#d43f3a>
+                    <cite title="Source Title"  >{{quote.author| capitalize}}</cite>
                     
                 </footer>
                 
               </blockquote>
             </div>
-            
 
     </div>
 </div>
