--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,7 +1,6 @@
-{% macro displayUsers(users_list) %}
-    {% for user in users_list %}
-    <div class="comments">
-        {{ user.users }}
-    </div>
-    {% endfor %}
+{% macro displayPosts(posts_list) %}
+{% for post in posts_list %}
+
+{% endfor %}
+
 {% endmacro %}
