--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,29 +1,35 @@
 {% extends 'bootstrap/base.html'%}
+<!doctype html>
+<html lang="en">
 
-{% block navbar %}
-    {% include 'navbar.html' %}
-{% endblock %}
-
-<!DOCTYPE html>
-<html>
     <head>
         <meta charset="utf-8">
-
-
+    
+    
         {% if title %}
         <title> {{ title }}</title>
         {% else %}
         <title> Blog Web</title>
         {% endif %}
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+            integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     
     <body>
-
+        {% block navbar %}
+            {% include 'navbar.html' %}
+        {% endblock %}
+    
         {% block content %}
-
+    
         {% endblock%}
+    
+    
+        {% block footer %}
+            {% include 'footer.html' %}
+        {% endblock %}
+    
     </body>
+    
 </html>
