--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -1,28 +1,19 @@
 {% extends 'base.html'%}
 {% import 'bootstrap/wtf.html' as wtf%}
 
-{% block styles%}
-{{ super() }}
-<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
-{% endblock %}
-
+{%block styles %}
+{{super()}}
+<link rel="stylesheet" href="{{url_for('static', filename= 'css/index.css')}}">
+{%endblock %}
 {% block content %}
-<div class="container">
-    <div class="row">
-        {% for message in get_flashed_messages() %}
-        <div class="alert alert-danger">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ message }}
+ <body>
+  <div  class="container">
 
-        {% endfor %}
-            <div class="col-md-2"> </div>
-            <div class="col-md-8">
-                {{wtf.quick_form(registration_form)}}
-            </div>
-            <div class="col-md-2"></div>
-        </div>
-    </div>
-</div>
+    {{wtf.quick_form(blog_form)}}
+    
+  </div>
+ </body> 
+
 <section class="footer">
     <div class="container-fluid" style="background-color: #56445D">
         <footer class="text-center text-white">
@@ -43,7 +34,7 @@
                             <h6 class="text-uppercase font-weight-bold">
                               <a href="/blogs" class="text-white">Blogs</a>
                             </h6>
-                        </div>
+                          </div>
                         <div class="col-md-2">
                             <h6 class="text-uppercase font-weight-bold">
                                 <a href="{{url_for('main.profile',uname=current_user.username)}}"
@@ -92,4 +83,4 @@
 
     </div> <br>
 </section>
-{% endblock %}
+{%endblock%}
