--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,100 +9,126 @@
 {% block content %}
 
 <div class="container-fluid">
-    <h1 class="text-center"> Welcome To Blog-Web </h1>
-    <div class="row">
-        {% for post in posts %}
-        <div class="col-md-12">
-            <div class="panel panel-default ">
-                
+  <h1 class="text-center"> Welcome To Blog-Web </h1>
+  <div class="row">
+    {% for post in posts %}
+    <div class="col-md-12">
+      <div class="panel panel-default ">
 
-            </div>
 
-        </div>
-        {% endfor %}
-
-</div><br>
-
-<div class="col-sm-12">
-    <div class="panel panel-default">
-        <div class="card">
-            <div class="panel-body" >
-            <blockquote class="blockquote mb-0 card-body">
-                <p>{{quote.quote}}</p>
-                <footer class="blockquote-footer" style:#d43f3a>
-                    <cite title="Source Title"  >{{quote.author| capitalize}}</cite>
-                    
-                </footer>
-                
-              </blockquote>
-            </div>
+      </div>
 
     </div>
+    {% endfor %}
+
+  </div><br>
+
+  <div class="col-sm-12">
+    <div class="panel panel-default">
+      <div class="card">
+        <div class="panel-body">
+          <blockquote class="blockquote mb-0 card-body">
+            <p>{{quote.quote}}</p>
+            <footer class="blockquote-footer" style:#d43f3a>
+              <cite title="Source Title">{{quote.author| capitalize}}</cite>
+
+            </footer>
+
+          </blockquote>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  {% for blog in blogs %}
+  <div class="col-md-3 ">
+    <div class="text-centre">
+      <div class="card text-white bg-info mb-3" style="max-width: 30rem; margin:1vw; padding:1vw;">
+        <h4 class="card-header">Blog Title :{{blog.title}}</h4>
+        <div class="card-body">
+
+          <p class="card-title"> Blog Category: {{blog.category}}</p>
+
+          <p class="card-text">Blog Description: {{blog.content}}</p>
+          <p class="card-text">Blogger: {{blog.created_by| capitalize}}</p>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+
 </div>
 
-<div class="container-fluid" style="background-color: #d43f3a">
-  <footer class="text-center text-white">
-    <div class="container-fluid">
-      <section class="mt-5">
-        <div class="row text-center d-flex justify-content-center pt-5">
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="/" class="text-white">Home</a>
-            </h6>
-          </div>
-          <div class="col-md-2">
+
+<section class="footer">
+  <div class="container-full" style="background-color: #56445D">
+    <footer class="text-center text-white">
+      <div class="container-fluid">
+        <section class="">
+          <div class="row text-center">
+            <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
-                  <a href="/quotes" class="text-white">Quotes</a>
+                <a href="/" class="text-white">Home</a>
               </h6>
             </div>
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="{{url_for('main.profile',uname=current_user.username)}}" class="text-white">{{current_user.username}}</a>
-            </h6>
-          </div>
-         
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="{{url_for('auth.logout')}}" class="text-white">Logout</a>
-            </h6>
-          </div>
-          
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="{{url_for('auth.login')}}" class="text-white">Login</a>
-            </h6>
-          </div>
-          
-        </div>
-        
-      </section>
-      
+            <div class="col-md-2">
+              <h6 class="text-uppercase font-weight-bold">
+                <a href="/quotes" class="text-white">Quotes</a>
+              </h6>
+            </div>
+            <div class="col-md-2">
+              <h6 class="text-uppercase font-weight-bold">
+                <a href="/blogs" class="text-white">Blogs</a>
+              </h6>
+            </div>
+            <div class="col-md-2">
+              <h6 class="text-uppercase font-weight-bold">
+                <a href="{{url_for('main.profile',uname=current_user.username)}}"
+                  class="text-white">{{current_user.username}}</a>
+              </h6>
+            </div>
 
-      <hr class="my-3" />
+            <div class="col-md-2">
+              <h6 class="text-uppercase font-weight-bold">
+                <a href="{{url_for('auth.logout')}}" class="text-white">Logout</a>
+              </h6>
+            </div>
 
-      
-      <section class="mb-5">
-        <div class="row d-flex justify-content-center">
-          <div class="col-lg-8">
-            <p>
-              
-            </p>
+            <div class="col-md-2">
+              <h6 class="text-uppercase font-weight-bold">
+                <a href="{{url_for('auth.login')}}" class="text-white">Login</a>
+              </h6>
+            </div>
+
           </div>
-        </div>
-      </section>
-      
-    </div><br>
-   
-    <div
-         class=""
-         style="background-color: #d43f3a"
-         >
-      © 2021 Copyright:
-      <a class="text-white" href="/">blogweb.com</a>
-    </div> <br>
-    
-  </footer>
-  
-</div> <br>
 
-    {% endblock%}
+        </section>
+
+
+        <hr class="my-3" />
+
+
+        <section class="mb-5">
+          <div class="row d-flex justify-content-center">
+            <div class="col-lg-8">
+              <p>
+
+              </p>
+            </div>
+          </div>
+        </section>
+
+      </div><br>
+
+      <div class="" style="background-color: #56445D">
+        © 2021 Copyright:
+        <a class="text-white" href="/">blogweb.com</a>
+      </div> <br>
+
+    </footer>
+
+  </div> <br>
+</section>
+
+{% endblock %}
