--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,28 +1,30 @@
-<div class="navbar navbar-inverse" role="navigation" style="background-color: #d43f3a" style="color: white">
-    <div class="container-fluid" >
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/"> Blog Web </a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-               
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              {% if current_user.is_authenticated %}
-              <li class="user"><a href="{{url_for('main.profile',uname=current_user.username)}}">{{current_user.username}}</a></li>
-              
-              <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
-              {% else %}
-              <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
-              {%endif%}
-            </ul>
-        </div>
+<div class="navbar navbar-inverse" role="navigation" style="background-color: #56445D" style="color: white">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/"> Blog Web </a>
+    </div>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
+        <li><a href="/blog" class="tag">Add Blog</a></li>
+
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        {% if current_user.is_authenticated %}
+        <li class="user"><a href="{{url_for('main.profile',uname=current_user.username)}}">{{current_user.username}}</a>
+        </li>
+
+        <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
+        {% else %}
+        <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
+        {%endif%}
+      </ul>
     </div>
   </div>
+</div>
