--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,14 +43,15 @@
   {% for blog in blogs %}
   <div class="col-md-3 ">
     <div class="text-centre">
-      <div class="card text-white bg-info mb-3" style="max-width: 30rem; margin:1vw; padding:1vw;">
-        <h4 class="card-header">Blog Title :{{blog.title}}</h4>
+      <div class="card text-white mb-3" style="max-width: 30rem; margin:1vw; padding:1vw;">
+        <h4 class="card-header">{{blog.title}}</h4>
         <div class="card-body">
 
-          <p class="card-title"> Blog Category: {{blog.category}}</p>
+          <p class="card-title">Category: {{blog.category}}</p>
 
-          <p class="card-text">Blog Description: {{blog.content}}</p>
-          <p class="card-text">Blogger: {{blog.created_by| capitalize}}</p>
+          <p class="card-text">Description: {{blog.content}}</p>
+          <p class="card-text">Author: {{blog.created_by| capitalize}}</p>
+          <a href="/blog" class="tag"><button>Add Blog</button></a>
 
         </div>
       </div>
