--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,7 +52,7 @@
           <p class="card-text">Description: {{blog.content}}</p>
           <p class="card-text">Author: {{blog.created_by| capitalize}}</p>
           <a href="/blog" class="tag"><button>Add Blog</button></a>
-
+          <a href="{{ url_for('main.delete_blog',id=blog.id)}}" class="text-danger" title="Delete Post"><button>Delete Blog</button>
         </div>
       </div>
     </div>
