--- a/app/templates/profile/update.html
+++ b/app/templates/profile/update.html
@@ -31,7 +31,7 @@
                         </div>
                         <div class="col-md-2">
                             <h6 class="text-uppercase font-weight-bold">
-                              <a href="/blogs" class="text-white">Blogs</a>
+                              <a href="/blog" class="text-white">Blogs</a>
                             </h6>
                         </div>
                         <div class="col-md-2">
