--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -12,7 +12,7 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
-        <li><a href="/blog" class="tag">Add Blog</a></li>
+        <li><a href="/blog" class="tag">Blogs</a></li>
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
