--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -33,8 +33,10 @@
       <input type="submit">
     </form>
     {% endif %}
+    
   </div>
-  
+
+ 
 </div>
 
 </div>
@@ -57,7 +59,7 @@
                       </div>
                       <div class="col-md-2">
                         <h6 class="text-uppercase font-weight-bold">
-                          <a href="/blogs" class="text-white">Blogs</a>
+                          <a href="/blog" class="text-white">Blogs</a>
                         </h6>
                       </div>
                       <div class="col-md-2">
