--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,9 +51,10 @@
 
           <p class="card-text">Content: {{blog.content}}</p>
           <p class="card-text">Author: {{blog.created_by| capitalize}}</p>
-          <p class="card-text">Date Posted: {{blog.date_posted}}</p>
+          <p class="card-text">Date Posted: {{blog.date_posted.strftime('%Y-%m-%d')}}</p>
           <a href="/blog" class="tag"><button>Add Blog</button></a>
-          
+          <a href="{{ url_for('main.blog_details', id = blog.id)}}"><button class="btn-success">Add a comment</button></a>
+
         </div>
       </div>
     </div>
