--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -28,7 +28,7 @@
 
                         <p class="card-text">Content: {{blog.content}}</p>
                         <p class="card-text">Author: {{blog.created_by| capitalize}}</p>
-                        <p class="card-text">Date Posted: {{blog.date_posted}}</p>
+                        <p class="card-text">Date Posted: {{blog.date_posted.strftime('%Y-%m-%d')}}</p>
             
                         <a href="{{ url_for('main.delete_blog',id=blog.id)}}" class="text-danger" title="Delete Blog"><button>Delete Blog</button></a>
                     </div>
