--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -42,7 +42,7 @@
 </body>
 
 <section class="footer">
-    <div class="container-fluid" style="background-color: #56445D">
+    <div class="container-fluid" style="background-color: #ffd97d">
         <footer class="text-center text-white">
             <div class="container-fluid">
                 <section class="mt-5">
@@ -101,7 +101,7 @@
 
             </div><br>
 
-            <div class="" style="background-color: #56445D">
+            <div class="" style="background-color: #ffd97d">
                 © 2021 Copyright:
                 <a class="text-white" href="/">blogweb.com</a>
             </div> <br>
