--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse" role="navigation" style="background-color: #56445D" style="color: white">
+<div class="navbar navbar-inverse" role="navigation" style="background-color: #ffd97d" >
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
