--- a/app/templates/profile/update.html
+++ b/app/templates/profile/update.html
@@ -14,7 +14,7 @@
 </div>
 
 <section class="footer">
-    <div class="container-fluid" style="background-color: #56445D">
+    <div class="container-fluid" style="background-color: #ffd97d">
         <footer class="text-center text-white">
             <div class="container-fluid">
                 <section class="mt-5">
@@ -57,10 +57,6 @@
 
                 </section>
 
-
-                <hr class="my-3" />
-
-
                 <section class="mb-5">
                     <div class="row d-flex justify-content-center">
                         <div class="col-lg-8">
@@ -71,15 +67,15 @@
                     </div>
                 </section>
 
-            </div><br>
+            </div>
 
-            <div class="" style="background-color: #56445D">
+            <div class="" style="background-color: #ffd97d">
                 © 2021 Copyright:
                 <a class="text-white" href="/">blogweb.com</a>
             </div> <br>
 
         </footer>
 
-    </div> <br>
+    </div>
 </section>
 {% endblock %}
