--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,10 +1,49 @@
 body{
-    color: rgb(91, 209, 215);
-    
+
+    background-color: whitesmoke;
+    color: #264653;
 
 }
 
 .footer{
     padding: 0;
     margin: 0;
+}
+
+.img-thumbnail{
+    border-radius: 50%;
+    width: 250px;
+    margin-left: 5rem;
+    margin-bottom: 8px;
+
+}
+.photos{
+    padding: 2rem;
+    margin-left: 2rem;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.4), 0 0 10px rgba(0, 0, 0, 0.2);
+    margin-bottom: 2rem;
+    border-radius: 15px;
+
+}
+.navbar{
+    border: none;
+}
+.footer a{
+    text-decoration: none;
+    outline: none;
+    color: #264653;
+}
+.quote{
+    
+    color: #264653;
+}
+button{
+    border: none;
+    border-radius: 10px;
+    
+}
+.sign{
+    text-decoration: none;
+    outline: none;
+    color: green;
 }
