--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -20,14 +20,14 @@
       {% endfor %}
 
       {{wtf.quick_form(login_form)}}
-      <p> Don't have an Account? <a href="{{url_for('auth.register')}}">Sign Up Here</a></p>
+      <p> Don't have an Account? <a href="{{url_for('auth.register')}}" class="sign">Sign Up Here</a></p>
      </div>
      <div class="col-md-2"> </div>
     </div>
-</div>
+</div><br>
 
 <section class="footer">
-  <div class="container-fluid" style="background-color: #56445D">
+  <div class="container-fluid" style="background-color: #ffd97d">
       <footer class="text-center text-white">
           <div class="container-fluid">
               <section class="mt-5">
@@ -70,10 +70,6 @@
 
               </section>
 
-
-              <hr class="my-3" />
-
-
               <section class="mb-5">
                   <div class="row d-flex justify-content-center">
                       <div class="col-lg-8">
@@ -84,15 +80,15 @@
                   </div>
               </section>
 
-          </div><br>
+          </div>
 
-          <div class="" style="background-color: #56445D">
+          <div class="" style="background-color: #ffd97d">
               © 2021 Copyright:
               <a class="text-white" href="/">blogweb.com</a>
           </div> <br>
 
       </footer>
 
-  </div> <br>
+  </div>
 </section>
 {% endblock %}
