--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -22,9 +22,9 @@
             <div class="col-md-2"></div>
         </div>
     </div>
-</div>
+</div><br>
 <section class="footer">
-    <div class="container-fluid" style="background-color: #56445D">
+    <div class="container-fluid" style="background-color: #ffd97d">
         <footer class="text-center text-white">
             <div class="container-fluid">
                 <section class="mt-5">
@@ -64,13 +64,7 @@
                         </div>
 
                     </div>
-
                 </section>
-
-
-                <hr class="my-3" />
-
-
                 <section class="mb-5">
                     <div class="row d-flex justify-content-center">
                         <div class="col-lg-8">
@@ -83,13 +77,13 @@
 
             </div><br>
 
-            <div class="" style="background-color: #56445D">
+            <div class="" style="background-color: #ffd97d">
                 © 2021 Copyright:
                 <a class="text-white" href="/">blogweb.com</a>
             </div> <br>
 
         </footer>
 
-    </div> <br>
+    </div>
 </section>
 {% endblock %}
