--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -84,11 +84,6 @@
                     </div>
 
                 </section>
-
-
-                <hr class="my-3" />
-
-
                 <section class="mb-5">
                     <div class="row d-flex justify-content-center">
                         <div class="col-lg-8">
@@ -99,7 +94,7 @@
                     </div>
                 </section>
 
-            </div><br>
+            </div>
 
             <div class="" style="background-color: #ffd97d">
                 © 2021 Copyright:
@@ -108,6 +103,6 @@
 
         </footer>
 
-    </div> <br>
+    </div>
 </section>
 {%endblock%}
