--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,7 +32,7 @@
         <div class="panel-body quote">
           <blockquote class="blockquote mb-0 card-body">
             <p>{{quote.quote}}</p>
-            <footer class="blockquote-footer" style:#d43f3a>
+            <footer class="blockquote-footer" style:#2a9d8f>
               <cite title="Source Title">{{quote.author| capitalize}}</cite>
 
             </footer>
@@ -56,7 +56,7 @@
           <p class="card-text">Author: {{blog.created_by| capitalize}}</p>
           <p class="card-text">Date Posted: {{blog.date_posted.strftime('%Y-%m-%d')}}</p>
           <a href="/blog" class="tag"><button class="btn-success">Add Blog</button></a>
-          <a href="{{ url_for('main.blog_details', id = blog.id)}}"><button class="btn-success">Add Comment</button></a>
+          <a href="{{ url_for('main.blog_details', id = blog.id)}}"><button class="btn-success"><i class="fa fa-comment" aria-hidden="true"></i></button></a>
 
         </div>
       </div>
@@ -68,66 +68,56 @@
 
 
 <section class="footer">
-  <div class="container-full" style="background-color: #ffd97d">
-    <footer class="text-center text-white">
-      <div class="container-fluid">
-        <section class="bg">
-          <div class="row text-center">
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="/" class="text-white">Home</a>
-              </h6>
-            </div>
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="/quotes" class="text-white">Quotes</a>
-              </h6>
-            </div>
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="/blog" class="text-white">Blogs</a>
-              </h6>
-            </div>
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="{{url_for('main.profile',uname=current_user.username)}}"
-                  class="text-white">{{current_user.username}}</a>
-              </h6>
-            </div>
+  <div class="container-fluid" style="background-color: #2a9d8f">
+      <footer class="text-center text-white">
+          <div class="container-fluid">
+              <section class="mt-5">
+                <div class="row text-center d-flex justify-content-center pt-5">
+                    <div class="col-md-3">
+                      <h6 class="text-uppercase font-weight-bold">
+                        <a href="mailto: kibiezekiel@gmail.com" target="_blank" class="text-white"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+                      </h6>
+                    </div>
+                    
+                    <div class="col-md-3">
+                      <h6 class="text-uppercase font-weight-bold">
+                        <a href="http://wa.me/+254722991833" target="_blank" class="text-white"><i class="fab fa-whatsapp fa-2x"></i></i>
+                        </a>
+                      </h6>
+                    </div>
+                   
+                    <div class="col-md-3">
+                      <h6 class="text-uppercase font-weight-bold">
+                        <a href="https://twitter.com/KibiegoEzekiel" target="_blank" class="text-white"><i class="fab fa-twitter fa-2x"></i></i></a>
+                      </h6>
+                    </div>
+                    
+                    <div class="col-md-3">
+                      <h6 class="text-uppercase font-weight-bold">
+                        <a href="https://www.facebook.com/kibiego.ezekiel.9" target="_blank" class="text-white"><i class="fab fa-facebook fa-2x"></i></a>
+                      </h6>
+                    </div>
+                    
+                  </div>
+              </section>
+              <section class="mb-5">
+                  <div class="row d-flex justify-content-center">
+                      <div class="col-lg-8">
+                          <p>
 
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="{{url_for('auth.logout')}}" class="text-white">Logout</a>
-              </h6>
-            </div>
-
-            <div class="col-md-2">
-              <h6 class="text-uppercase font-weight-bold">
-                <a href="{{url_for('auth.login')}}" class="text-white">Login</a>
-              </h6>
-            </div>
+                          </p>
+                      </div>
+                  </div>
+              </section>
 
           </div>
 
-        </section>
-        <section class="mb-5">
-          <div class="row d-flex justify-content-center">
-            <div class="col-lg-8">
-              <p>
+          <div class="" style="background-color: #2a9d8f">
+              © 2021 Copyright:
+              <a class="text-white" href="/">blogweb.com</a>
+          </div> <br>
 
-              </p>
-            </div>
-          </div>
-        </section>
-
-      </div>
-
-      <div class="" style="background-color: #ffd97d">
-        © 2021 Copyright:
-        <a class="text-white" href="/">blogweb.com</a>
-      </div> <br>
-
-    </footer>
+      </footer>
 
   </div>
 </section>
