--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,5 @@
-<div class="navbar navbar-inverse" role="navigation" style="background-color: #ffd97d" >
+
+<div class="navbar navbar-inverse" role="navigation" style="background-color: #2a9d8f; " >
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -7,22 +8,22 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"> Blog Web </a>
+      <a class="navbar-brand" href="/" style="color: white;"> Blog Web </a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/">Home</a></li>
-        <li><a href="/blog" class="tag">Blogs</a></li>
+        <li><a href="/" style="color: white;">Home</a></li>
+        <li><a href="/blog" class="tag" style="color: white;">Blogs</a></li>
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {% if current_user.is_authenticated %}
-        <li class="user"><a href="{{url_for('main.profile',uname=current_user.username)}}">{{current_user.username}}</a>
+        <li class="user"><a href="{{url_for('main.profile',uname=current_user.username)}}" style="color: white;">{{current_user.username}}</a>
         </li>
 
-        <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
+        <li><a href="{{url_for('auth.logout')}}" style="color: white;">Sign out</a></li>
         {% else %}
-        <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
+        <li><a href="{{url_for('auth.login')}}" style="color: white;">Sign in</a></li>
         {%endif%}
       </ul>
     </div>
