added blog table

--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -8,17 +8,17 @@
   integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 {%endblock %}
 {% block content %}
-
+<hr><br>
 <body>
-    <div class="container-fluid">
+    <div class="container">
 
         {{wtf.quick_form(blog_form)}}
 
     
 
     </div>
-</body>
-
+</body><br>
+<hr><hr>
 <section class="footer">
     <div class="container-fluid" style="background-color: #2a9d8f">
         <footer class="text-center text-white">
