--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -43,27 +43,34 @@
 </div><br><br>
 
 <div class="container">
-    {% for blog in blogs %}
-
-    <div class="col-md-3 ">
-        <div class="text-centre">
-            <div class="card text-white mb-3" style="max-width: 30rem; margin:1vw; padding:1vw;">
-                <h4 class="card-header">{{blog.title}}</h4>
-                <div class="card-body">
-
-                    <p class="card-title">Category: {{blog.category}}</p>
-
-                    <p class="card-text">Content: {{blog.content}}</p>
-                    <p class="card-text">Author: {{blog.created_by| capitalize}}</p>
-                    <p class="card-text">Date Posted: {{blog.date_posted.strftime('%Y-%m-%d')}}</p>
-        
-                    <a href="{{ url_for('main.delete_blog',id=blog.id)}}" class="text-danger" title="Delete Blog" ><i class="far fa-trash-alt"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
     
-    {% endfor %}
+
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th scope="col">Title</th>
+              <th scope="col">Category</th>
+              <th scope="col">Content</th>
+              <th scope="col">Author</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for blog in blogs %}
+
+            <tr>
+              <th scope="row">{{blog.title}}</th>
+              <td>{{blog.category}}</td>
+              <td>{{blog.content}}</td>
+              <td>{{blog.created_by| capitalize}}</td>
+              <td>{{blog.date_posted.strftime('%Y-%m-%d')}}</td>
+              <td><a href="{{ url_for('main.delete_blog',id=blog.id)}}" class="text-danger" title="Delete Blog" ><i class="far fa-trash-alt"></i></a></td>
+            </tr>
+            {% endfor %}
+            
+          </tbody>
+        </table>
+    
+    
 </div>
 
 </div>
