--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -9,25 +9,27 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<hr><hr><hr>
+<div class="container-fluid">
     <div class="row">
       <div class= "col-md-2"> </div>
       <div class="col-md-8">
         
       {% for message in get_flashed_messages() %}
         <div class="alert alert-success">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <button type="button" class="close" data-dismiss="alert">&times;</button><br>
         {{ message }}
-        </div>
+        </div><br>
       {% endfor %}
 
       {{wtf.quick_form(login_form)}}
-      <p> Don't have an Account? <a href="{{url_for('auth.register')}}" class="sign">Sign Up Here</a></p>
+      <hr>
+      <p> Don't have an Account? <a href="{{url_for('auth.register')}}" class="sign"><button class="btn-success">Sign Up</button></a></p>
      </div>
      <div class="col-md-2"> </div>
     </div>
 </div><br>
-
+<hr><hr><hr><br>
 <section class="footer">
     <div class="container-fluid" style="background-color: #2a9d8f">
         <footer class="text-center text-white">
