--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -9,7 +9,8 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<hr><hr><br>
+<div class="container-fluid">
     <div class="row">
         {% for message in get_flashed_messages() %}
         <div class="alert alert-danger">
@@ -25,6 +26,7 @@
         </div>
     </div>
 </div><br>
+<hr><hr>
 <section class="footer">
     <div class="container-fluid" style="background-color: #2a9d8f">
         <footer class="text-center text-white">
