added subscriber form

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,9 +1,6 @@
 body{
 
-    background-image: url('https://64.media.tumblr.com/352745a46ac7fea8ce5a2cc6532377c9/tumblr_pk0lq1CPye1tbadl0_500.gifv');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-color: #001219;
     color: white;
     font-style: calc();
 
