--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -24,12 +24,13 @@
 
       {{wtf.quick_form(login_form)}}
       <br>
-      <p> Don't have an Account? <a href="{{url_for('auth.register')}}" class="sign"><button class="btn-success">Sign Up</button></a></p>
+      <p> Don't have an Account?<br><br>
+         <a href="{{url_for('auth.register')}}" class="sign"><button class="btn-success">Sign Up</button></a></p>
      </div>
      <div class="col-md-2"> </div>
     </div>
 </div><br>
-<br><br><br><br>
+<br><br><br><br><br>
 <section class="footer">
     <div class="container-fluid" style="background-color: #2a9d8f">
         <footer class="text-center text-white">
