--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -20,7 +20,7 @@
       <p> {{user.username| capitalize}} has no bio </p>
     {% endif %}
     {%if user == current_user %}
-    <a href="{{url_for('main.update_profile',uname=user.username)}}"><button>Edit Profile</button></a>
+    <a href="{{url_for('main.update_profile',uname=user.username)}}"><button class="btn-success">Edit Profile</button></a>
     {%endif%}
   </div>
 
@@ -33,7 +33,7 @@
     {% if user == current_user %}
     <form  action="{{url_for('main.update_pic',uname=user.username)}}" method="post" enctype = "multipart/form-data"><br>
       <input type="file"  name="photo" class="form-control" required><br>
-      <input type="submit">
+      <input type="submit" class="btn-success">
     </form>
     {% endif %}
     
@@ -52,6 +52,8 @@
               <th scope="col">Category</th>
               <th scope="col">Content</th>
               <th scope="col">Author</th>
+              <th scope="col">Date Posted</th>
+              <th scope="col">Delete</th>
             </tr>
           </thead>
           <tbody>
